# new_one

./: pyproject.toml
src/: funcs.py  load_data.py  main_code.py
tests/: test_funcs.py  test_load_data.py  test_main_code.py
